--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@ Version 9.0 (October 31, 2017)
    •Inverted breve, dot below, and horn accent marks added to accent palette
    •Smart replace
    •Button to change font for accent mark preview
+   •Re-arranged accent marks to make more sense
    •Redesigned splash screen  
    •Add Space & Breeze theme
    •Default theme now 'Breeze'
