--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -133,6 +133,8 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
     <value>Version 9.0 (October 31, 2017)
    •Inverted breve, dot below, and horn accent marks added to accent palette
    •Smart replace
+   •Button to change font for accent mark preview
+   •Re-arranged accent marks to make more sense
    •Redesigned splash screen  
    •Add Space &amp; Breeze theme
    •Default theme now 'Breeze'
