Add tilde smart replace options

--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -131,7 +131,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   </data>
   <data name="TextBox2.Text" xml:space="preserve">
     <value>Version 9.0 (October 31, 2017)
-   •Inverted breve, dot below, and horn accent marks added to accent palette
+   •Inverted breve, tilde through, dot below, and horn accent marks added to accent palette
    •Smart replace
    •Button to change font for accent mark preview
    •Re-arranged accent marks to make more sense
