--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 Version 9.0 (October 31, 2017)
-   •Inverted breve, dot below, and horn accent marks added to accent palette
+   •Inverted breve, tilde through, dot below, and horn accent marks added to accent palette
    •Smart replace
    •Button to change font for accent mark preview
    •Re-arranged accent marks to make more sense
