--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ Version 9.0 (October 31, 2017)
    •Full/Minimal mode toggles
    •Dictionary form now respects font dialog color
    •Fixed bug where clicking "New" would sometimes not clear every page
+   •Fixed rendering of checked items on menus
+   •Word wrap checkbox now updates when you change tabs
 Version 8.5 (October 13, 2017)
    •Help file included   
    •Minor changes to splash screen
