--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -131,6 +131,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
   </data>
   <data name="TextBox2.Text" xml:space="preserve">
     <value>Version 9.0 (October 31, 2017)
+   •New icon
    •Inverted breve, tilde through, dot below, and horn accent marks added to accent palette
    •Smart replace
    •Button to change font for accent mark preview
@@ -160,6 +161,7 @@ Version 8.5 (October 13, 2017)
    •Dialogs now match theme
    •Fixed bug where decimal separators other than "." would throw errors
    •Re-design update dialog and fix buttons not working
+   •Auto-size dictionary cells
 Version 8.2 (September 30, 2017)
    •Find words in dictionary   
    •Color panel for quick access to font/highlight colors   
