--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -1026,4 +1026,160 @@ Public License instead of this License.  But first, please read
   <metadata name="ttMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAF
+        iQAABYkBbWid+gAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAACLDSURBVHhe7Z17
+        fFTlue895/x5bh/kTgIhIReSzCWAykVuKojcciVyU0RpEVFQq1Z3u93et9rdfXraYz9bQG33Ocda0HZr
+        Razt3opivZxu8AY0Q0jABJLJhCRDJpOZWWvWes7v92ZNnEzWkEkmIm15P58fE2YSYL6/d73v8z7Ps4ZL
+        Lo6L4+K4OC6OAcfDD1/yH3dVujJ3rnQX7yhzzdxZNm3RznJXlRK+Vs/hNX6PXHLJf7B+7OIYythRPeO/
+        P1vmWrmz3P3Yi9WuV/dtcNYe2OSKHNrqlKPbnHL8Lkek4TuO7uZ7HcHm7ziCDXc7uo9vd0SObi2WQ5sd
+        cmCjM7J3vaP2xWr3v/DP2FnhXvGTpTP/m/XHXxyJgzN2V5lr3s5K99Ov3uj64qPbnEbj/c6Q9qgjIo87
+        RB4r7tGj0CPQw0UiD0F/Bz1o6W8LRb4PfQ/6G+iBqUrafVPDjbcXhT66udh4bbXz8+cq3E/tqHDPvXiV
+        YDxXOj13V7n70Tc3upuO3evStMcB/EkA/3voCSgGn+CTwgfsJPDlfui70H0FIvdC9xSIdvfU8LHNRdq+
+        tc4mXBmP7Ch3TLH+OX89g2v2nnWuDz7Z7jS7H3eG5CmnKPDDBZ/gbeDLd6h8kbuhu/Kl+4780KGbisw9
+        1a73d1W4rrb+eX+ZQy0zFSVle9a7Pz1yjytiPO2KytMAH4NP8HbwCd4OPsGnAV/uhLZD2/LE3JZn1G4q
+        1H9V7fyUe89f3PL0bMU09yvrXAfrH3Bp8g9OU34A6EnhA/bXAZ/gbeDLHZZuhxG35Zp1N0+N7Fnl/PzZ
+        0mmXWf/8P9/xv691/efnq0p+8MFWdzT6tEsHfLGFT/B28B9OAp/ge+EDdvx6P0T4sjVX5DZoS64Yt+bp
+        B28ojP68wv3Mn2309Gy565o3b3ad6XoCa/w/uHrAXxDwATsGn+AT4Mut0OYpSoFNeaF91xe37ih1X2W9
+        rQt/7Kmu/k8vlE977OCd7qj80GUOGT7B28EneDv49yWBT/BDgC/fhr4Fbcoxj6wviD6PaI3vzXqbF+b4
+        aXXxuJfWuD7wPuwKA770WXLs4HOz7QffAv9NwSf4r+CL3ALdnCPeG/PCuytdB/6pwjXGersX1mBM//pG
+        9+nI067I1wafm20/+BZ4O/gEbwd/6+Dgy8YehTfkRF6vcjS+UOXMsd72hTF2lDmdXO+jP0SUkwif4O3g
+        EzxkAryJJccEdCWAVwJ8E/BNwDcB3wR8E/BNwDcB3wR8E/BNgFcCfBPwTcA3Ad8EeCXAR5gpJuCbgG8C
+        vBLgm4BvAr4J+CbAU7bwb8ru0YZsid6Qo79VVdzxXKl7mvX2v9nxbKlz/ju3urrNHzqNgeCbAG8+BmHG
+        GxTgG4BvALwB6AagK/0tBPAGwBsAbzxATRUD4A2AN7DkGIBuALoB6Ep3QwBvALqBKMfYRuWJAfAGwBuY
+        9QagG4CuBPDGZgjQDUA3NlkCeAPgTQrwzTj4ciN0Q7aYN2QZ71VN7Wb6xMLwzYwdla7p+wFf/hGbrR18
+        godMzHrCNwA/+kiR6FhqKA3QNZxmlTDbNUDXvj9VtO9BmO0aoGuArn23oEeY8RrAa/fki4ZDlYbZrgTw
+        2p15omG2a4CuAbp2R65ot0OY7RrAa1umiHarJcx4DeC1b+WIhtmuAbrSzdmibcwWHcB1znbIgEzKgi/r
+        J4usg9ZMNvdXFQZ3lpeUWDjO72AO5be3uNvMH6poZ0D4Ucx4DdDDgN4N4EEA7wLoAEAHADoA0IH7CyQA
+        0AGADgB0ADM8ANBKAB0A6ABAKwG20rZcCQB2ALADgB0A7ABgKwF2ALAD386RAGAHAFsJsAOAHQDsAGAH
+        ADiwYbIEbpwsXQAdBOjQDZMlAul4LqpmPRSDv7ZH5ppJxluVxf6dFe58C8v5GYx2frPBfSr6gyRrvgU/
+        tuwQfgTwCf4slpV2AG8F6JZ788WL2ewFYO/deT26CwJgL+B6AdcLuEoA7N06pUe3QQCsBMheQPZiRnux
+        lHgBWAmQvYxeAFkJoJUA2guoXsD1AqgXQL3rssS7FlqTJS1Q65pJ0oHHAJ4P4XUNjwYezTj4gtdlNZ6/
+        PkvfW1HceN6iI8bCDDUjTyHaYYxvB5+brQWfyw5nfhDwOzDbvZjdDQBdtz1XagHWg1nrAVQlgPUAqgdQ
+        PZtzxIOZq4TZ6/lWtng2QbdAmL2emyeLZyN0EwSoSjdm9egGaD0EcDVrJ0kNgNastnS9pWpoFVQ1sUeV
+        E8UD1VZmSj0eG/GcD99zFj8TAmwdBhlrOOu/gi/XQ9VZEl6VFXmp3HGARSML09c3XqgoebyFcf4A8Bnt
+        mIhyuOZz2eHMJ3zNd0L0Dq9oUKS9eXBqG6LODE4apEOB370ovlUTJQDDIpztq2lAX/gCE6VqkrRU5YR2
+        lbsesjB9PWNXecnCT+/Cmp/C6ZbwGelws+3Get+GNZ4z3wgHRUxDyTT6C7+kLbs/dzDCL0qdf3hDTldM
+        lA4ADgN4FDJt4Etljw6VF+hMtVu4hncwKcVYH/B7spnngM8Dlgo1EWbqCDGDiG58mP1cdmIG2L3xC0n4
+        RfzvvyEnSzOlDUtSN2DTAIPgbeALjJKyiea+8kLf86UF/9XCNnzj51XuZwIsnsTA28HHmh873fKAxRhf
+        Q1zPaIcb7jGs+TQg2RseTtn9HYNVx4G9UrciQ1rLYQBg6wBvrEqAX2HBx/fAAOkqzQr9vNz1Iwvb8Aye
+        dP99myuaKnymFni65QGLMT5DTUY73HCjoa4+b/JPO++Tw09cL54nV8vxp9ZIHR7rn1otJyh8rfT30BNx
+        evx6OfGYpUe/Uv3D1VL3ULUc+7tqOfr9VfLpA1XSfvjjPn/fYNQOA44vzxBfWaYEaQDgGwSfBL6UQisz
+        5f+V5kVZA7HwpTdYHXplretQbwUrGXyCt+Azr8O0Ak+3PGAxzmeoyUgn8Qr4/MFl8hkjG0Q69Yh8voQa
+        EAU1IrRsRGjZiCioEa81IrRUwvc2IgpqRGjZiLCyEdGPEkLLBoSWJxEqHkfUcxib58flmdL60Vt9/r7B
+        iAbULoMBWIaCAK4DvNG75EAEnwBfVmSKsTxTf7nM8cdhqayxjFh/P0LOGPgU4DOppgzA8kMDumBACzbg
+        WssAvDv1BvlY89ByqQXkUwhBfbhC2rBMdeAk23F7nvjxez8OVv4tMU0RP8zxwxw/zPHDGD9MUULc374x
+        R87AjGbE9/UIHz/D2n0mHQPegwFLLQMw03WAN9SsTw5flveobsWUyI7KkuUWxqGPX693fQL4Zg98wLaD
+        T/Bx8JnNZEKNOR2mF7pwwvXhJFsHoPFREFX/yAppANhWHLQ6t+VJEAew0PZ8CeMxjN+HYUYYZoTxehg/
+        H4YhYZgRhhFhGKEEM8I4hHXDhC5cHe04zZ5C3H4UsXx72gZMEB/gBgFbB3ij3IJP8Hbwl1EZYl6XYf6q
+        vPhTC+PQBmb/4mP3ufTeWZ8ifKaSmc2MYvZHsP534dTbele+nLQxoPGxFdKE2c9ZT/gR5nSg6J35EoUR
+        0W0Ufo/XozAiuhWCCVGYoHQrtBlibgdXQhin384NOPHiEOYZDgOugwGAGwRsHfCNGPhzwBdcNXJdhniW
+        TdHS6rZg64j5pMMYCnxmM3VEPyHE/5334goA0AYsQYFPfieBL/YrdUGN31uoUgtccpQBkA4xo2lSgN8v
+        nQwDVCqZwpUQSydHN8EEGNCFvaEFBhwbDgOWwADADQK2DugGoSeDT/AWfFmCq2BJhrGn1PG+hXNw49mq
+        krxPtmHpiYG3g0/w54AfZpIN8Nux/DRvy5WTTDVgvT+KmXoEm2kNVI91/DQAtuK1s1hmugGaGU3O/Bh8
+        u8J5TyFlSp/yoXHLFNGxOQdxBfiwBNViD0jLgHdhwLUwALM6CNg6oBsrU4Mv10KLJ8ihpVPMITV/PV/p
+        frT7UUd3X/iAPQB8FlGiMCAGvw1LTxM21hPM8QD2kU3Z8vnGyfLZTZPlMB5rsGbXMbKBMT4APQvA3Vhm
+        dJjBPD5nvm35MAG+YPYzj68MwB7gW0MDMqX9w3QNGC8+gA0Ctg74yoAB4U9Q8GXRBOlelBnaVel62MKa
+        2mD49OZNzqZe8HbwWTiPg8/yIeGziMJcfhAn33ZEPu0/u0s69v1UWvc+I97fPCNNr/0vOf1qj5qgZsiH
+        59rw2tnXn5EztxepVDI3W675XHZSgc8KljIAyw/TyT5EQbUVw2DAYhgAsEHA1lfAAIJPhE/wNvDlmh7t
+        W1F4elAhKatcx+5xaoOBz9oty4c0IMJ1HwcvH9by4KE3+2y6A8m7fboKM0OArQM61/x+tds+8L8qHxoI
+        Q1lICSIM9V0PA3AOSNuARZYBgK0DPGL81OFfTY2XmiXZ+s6ykjkW3oEHu5S1xxxhtd7bwSf4BPgsnLN2
+        G/0bGICo5yzWfebxuw72NSDxTfK5eDXdMV3aGVICto4rIbbhDgRfGXATDZgsQRzGmEquxQk2LQP2w4Br
+        YAA24iBg6wBvEHw8fII/B3y5arxoV2WEEVE+YeEdePzmRtdhe/gWeBv47FqgAazdRrD8dMKAFqzfwQQD
+        BlIzDOjAkhLCMqNDfeATvB18Fs4hlg9ZwQquhQGrYEBpRvoGXD1OfICrDAB4Y2kq8AHegi8LoQXj5bUV
+        RamdCXhzxEdbnEZS+ARvA58tI+xaYOGctdsgDGhD5OP/5UPS+YdfScf7r0jbe69I67sv99EZqB3y47Wu
+        A3h9S7F0YkPmAYsxPrsWUoHPwrmBzVe/AQasoQETh8GA16X2KhgAuEEA1wHf6LPkJIFP8HHwZf44+XBp
+        rpFSm+POUldpw71YfgYJn/06sZaR6H0IQVnHxYHqDKKZ05jJ9YBWg6jnMGboZ+uzlL6A/nRDlhxnHoex
+        OyIiphe6AZqFc3YtMMbvBW8HHz8X61owsPnqWP+Dq7PEhzNA7UoY8EGaBiy0DABwHeCN3lmfOnyZN06+
+        vCornFJqgrf0aI8UhwcFH+BjzVLs12HLiA4DQjh8sXDeho20aXOOnGDSDWv0UczSIwBfA9Xj96cQOrbi
+        tbOAG4PP0+1g4LNlxFgPA3AAC15vGbCCBvzWFm4qan/HMgAbcRCwdYA3FHiI4O3gE3wCfJk7TiLzJoR3
+        lrkfsTAnH7+odr1mC5/gHwTsc8CPdaqxUYq9OmwZYV6nE1cBY/wGwOv4/T9L+9u/UPJDp+6eo4rmTKgF
+        ATsSB7+3USoZfIK34LNlhIVz1m6VAazvDosBY8WHjTgI2DrAG4tTgQ/ocfDlSmqsvLjS9SsLc/LxxgbX
+        8XTgx1oE2aUWhQFMLXTBgFYAPYklxgh19dl0T31/mbTAgE4AZlJNx/rPZqmvutRSg89+HQObr44DmDIA
+        Z4Da5cNgwAIYAMBBwNYB3yD0mBLhc9bbwZ8zVmnv8kKPhdl+sKr/3iZXpB98greDT/A28NmfaWIJYqca
+        m6W6sAT5ALQep99EAxq+t0yaAVIZgPWfSbXBwZ/c2yzFrgUd638QIagPZwDm8tv/kKYB82EAAAcBWwd0
+        g9CHAF9mj5X9S/LD5zyQ8R7bT25D+JkmfN4KxB5Ntgkyr9OFWL4FcGux2SYacOKBZdKE58/i6ggDdhTg
+        zRh8greDT/AJ8Nmrw64FZQBCUFaxmMtP24B5MAD7QBCwdUBXBtjBJ3g7+ACvNGusHLomR54vnTbBwt1/
+        8Ebno3c4zH6bbS98wI5fcuzgAzzFBllmNNkmyNQCG6XYr5NoQP39S+U0nvdjGQrje5jRNIcAXzD7DcDX
+        sfywfMgiClPJaRnwNgyYO0Z8mNlBwNZxuDLiDljJ4X8162PwZeYYObIw29xVMb3Qwt1/4AqYVbvdoaUL
+        n63h7Exmcyz7M9ki2AyYNQg7YwbwDfKx7rtL5RSe9wMwc/lRfJ8ZA28Hn+u9DXyrS00Vzlk+ZBGFqeS0
+        DbgSBgBuELCVAQSfKnyCt+DLFWPk2Pws/bly9xUW7v6DBZiGO4tDfZYcO/gp3BDBtnB2JrM5lv2ZzYBZ
+        s26SKsrj3ak3yEdlAEJHPwCHcRVE8X3sTE4dflZPoxQNAHwWzlk+ZBGFqeS0DZgDAwA3CNg6wBsEHw+f
+        4FOAL5ePkS/nTgzx1i0Ld/+xq8Jd6f1OcVe68HlDBPP4TCezM1kZALhsE+xnwH0wAKGjH/tAGLCjgM62
+        cFv4BG8HHzOfYssIC+csH7KIogx4fzgMGAsDxokO8AbBDwG+XDZGmmdnBHEWqLBw9x+9BiSFb4G3g0/w
+        FnzejcI8PnvytS0wAKFlM2CyR7OfAffSgEnix8wOA3b0JsuAQcJnsxRbRlg4Z/nQt4wGjE/PgH+DAbNH
+        i28uDABwHeCVAfFLjh18gk+ALzNGp2IAlqBtRSEV6aQBnxUs5vF5QwT78tkazlCTzbH9DbhOTsEYP+CG
+        ATsK8OqmiET4BG8Hn11qFCIftoywcM7yIYsozOWnZ8BvpHaWZQCA6/NhwBDhy/TR8uWVmQMsQdiEj28t
+        1gYNH9FO4n1YzOPzThTeEMGe/GbAZFdyv034HhgAY/yAG8ZVwJsieENE6vAn9XaqsWWEhXOWD5UBi4bB
+        gJkwAJCVAZARg2+dbvvBJ3gb+DJttBybO+ncm7AKQ7cUm7bwCT5F+KxgMY+vDMD6zxsi2JPviTMgpnoY
+        cBow/dgHlAEA3+9ulGTwCd6Cz2YptoywcM7yIYsozOW3HxgGA7APBHEV6ABvDBE+dWTe5HOHof+0wp3x
+        ybeLzwEfsFOAzwoW8/i8D4u3AnXdki0tgFtrY8AJGNCE58/SAACP3Y3SZ71PAT6bpdgywsJ5rwFXj0vf
+        gCtgwGwYAOA6wBsJp9t+m62CD+Dx8EuoUXJoQbbsqJwx3sLdf6hUxE2OSD/4nPV28AneBj7Lh8oAzH7e
+        h8VmKR8MqLcxoAEGNGMZ6aQBAB4F+MRbgVKBz2YptoywcM76LatYzOWnZcC/woDLYcAsGADg+hwYMET4
+        4h4l+6/JPXcqguONdc7j6cJXBmDtZ14ngvW/CyFoK6CetDHgFAxooQGAHIYJTCczqWYq8EngE3wv/Im9
+        nWrsWFAGsJ8TIWjtwmEwAEB9gBwEcB1SBtjB55JjBx/glVyjZO91U8+djON4scr1ar/N1g4+wdvBV1Ws
+        KSqjyU61EA5U7FTzAWwDNtuOfT+T9t+9KO1vvSh+PJ7aPFO8MMCP11hIiQB4FOB5K1Cyu1Hs4LNXRxmA
+        5YflQxZRlAHvvWkLNxX1GoBlKIirQAd0Y4jwxTlKXlzuGDgdzU+w4qdK2cMH7BTh6xZ83oHYhtnfBJgn
+        AJr3YR0tz5QjZZlSA9UD4Ck817pqopzF692ArUED3Y3Svy28p2WEhXOWD32LYMCCsekbMGOU+LAMBQFc
+        GZAS/DjwFvyIa3R4R3nJwP1B/MCihi2F4V7wdvAJ3g4+1nyKGU3mdXjr55n1WXIaIOsBsAbQDpdlyGcr
+        oRUZ8gX0p9IMOQ4jGmBKC173V/XcjaLBDKYWzBThs1mKLSMsnLN8yCIKU8lpGfB7GDAdBgBwEMD1mTAg
+        ET7BDwBfHCOlYWZGaFdZyTILc/LB22s+2lhkDBY+C+eEbwA+b3oO4jDFme9/4UHpfOdl6Xj7ZWn7tz3S
+        +q/Q72PaLWfw2I7n/FAXX1+dL524IsKAHl0FA+Lhc7PtBz+zp1EKYssIC+csH7KIwlRy2gZMgwEArAyA
+        jCHAl+KR8sGCnNSK8hyvrnZ+kRT+OT7ogoUU3u4fQdTTibi/BZtq8MN9fTbdgdS8zikdgBwCcOZ1zBTh
+        s1mKLSMsnLN8yCLKsBgAqD5cBUEsQzrAG/HwCd4OPsHHwZeikfIvSwo/sfAOPJ4vcz+pbSsI28b4SeAr
+        AzD7mU6OIOo5i7DTi6WnK8GAxDfJ5+LVBAPaAbgbsJnXMSkrzLSFD/CxTjW2jLBwzvKhbyEMmDsmPQN+
+        BwPcI3sMwDKkA7yREnxAj4MfKR4dfq7M9biFd+DBz9U8tqlQ6wef4O3gs4IFmdh42Z8ZwfLTieWH/ZnB
+        D9/oB/lc8q5ziB97QgiwmddJFT6bpdgywsI5y4esYjGX3/5umga4LAMAXZ8BA+KXHDv4BB8HXwpHSs3M
+        ifqzFdNmW3gHHqo5d43z9GDgs3bLQgr7MzVEPuzPbMcS1P6j26Xj5Z9I6+4fi/eXP5aml/6nnP5Fj5qg
+        ZsgHtb30YzmL18+sypUAQIcBPFoOA2Lg7eATfNwNEWwZYeE8iPWfVSymkofFAOwDQUDXIWOQ8GXqpbJ3
+        Uf6pQTXncuxCyBS8La97QPhY82OF89hHvDChxrQCP2uhDWFkE9bxE4hyPIh+jgDY50snyGfXjZfD102Q
+        Gnxdh+caeTci4J4tzZRuwI7djWKmCJ/NUmwZYeFcGTB/GA0oGSlBmKADuqHAJ4FP8Anwu4tGD+0Oet5U
+        cOjGQrMXvIIP2EngxypYTCUbN/b0aIbXwQTE/+0IKZsR2fCmZw9Cz6PLJsgRgCf8ekA8DfitcfA1KGrB
+        VwbYwSf4OPhslmLLCAvnrN+yisVcftoGOC8VH/aBIIDrAG+kBP9SBV8KLpVDcyabQ/6Erd1VrvfNLbnR
+        VOHHiijMZva0CWapD7rohAFslGoA4MAHb0rgj28rdUGNt8wRL0zpwGsspESw/sduBTJjAnwT8E3ANwHf
+        BHglwDcB3wR8E5FPFPA1xP9d2IBb5o6VY7NgwP40DHjrNal1wABcBUEA190wgODt4BN8Anwzf6SxZ2nR
+        AQvn4AeLB54NU/VkN0Scq2vBZGoZVwBTC104TLUiqjmJJcjo7psLarz9WmnCFdAByEGYEIE0fB3F4UoJ
+        4KMAHwX4KMLMKKArAXwU4KMEj5mv4GPpCWP2d2L99145VjxXDIMBxTAAUU0QwHVIGZACfMm/VGoun6Tx
+        8zUsnEMbr1Q5DyK+NwcDn4VzZjSZVNMYiuJAxUapOoBONKD+tsXSgNncitc6AZup5BAUBvQwngtjiQrj
+        9TCgh5dMkDAOWUoAH14E4JjxYQt8N9QF+O2I/0/NHiNHEbunbUARDMBVEIQJygA7+FzvE+CbeZearywp
+        Sj32TzaYmqjfUBDpgR8H3g4+8/iAz1w+P9yInWrM63RhE27B0sJOtZgBfIN8rLl1sardnuLtoIDcBnUo
+        TRA/Beh+APcvHi9+AFcCdP/V48R/FYRw0w/oVPv8sXIGS0/znLFSP3OMfDZjlJx5J00DCkeID1dBEMB1
+        gDdSgC95I6R2Rqa2s9y51MI49MHw6ZdVzj/ihKulCp+5fKaT2SjFnE4ABnixtHgAlAbEv8nPv3WNfAaY
+        HkCtB9wvoQZ83YjHRj5idjcCdCNANwKyEkA3YpYrAXgjlptGxPwNiHpOzhojx68YI4cvGyUfI3ppfWdf
+        n79vMGr/LQyYCgNwFSgDHDAgBfhG/gh9z5KijyyE6Y/nKlyOf19bpPeCt4NP8BZ8FlGYSmajlLYKBuA0
+        68W67sFsjiYY8Kcn75LD28rFs71Cjm8vlzqoHjqB35/YRuHrO+J0e5mc2GrpNmjLV6q/tUzqNpfKsW+X
+        ytFNK+XTW1ZK+8EP+/x9gxENOE4DADkI6DpkxMMn+AT4kjtCPp4zObqr1OGy8A3PeL7c+ZPODbmhVOCz
+        iMJUMrOZNKALp9kWbMDHYEDiFRATfklf/HMs2f0dg1UHDKgrGCGtMKAbV4EO8MYA8ANTR4d+Vlr8jxa2
+        4RvM5O2rLm4FeLMffIKPg88iionZrxql4jrV6iwD8O76vdkLTTTRDwNOwoA2GgBFaUAMPsEnwJcpI8w3
+        rilo+Wl18X+xsA3v2FkxbcGhNQXRgeCziMI8voHZz4xmd/lEaYMBDdhc46Mg2zcem82DEX8uTnZ/7mAU
+        +3M6YcBpLEEdAB6mAYBvJocvB2dl61/7/8TBu76b1uSG+yw5CfBjFSzm8qNY/5nXOYs9wIuTr3aqXvTW
+        ZtGgiK9p8GoZorypS4N0KLD7n8WHKyAA6JGpmP14NGPgE+B7HeNCu8rdD1qYvr7BzondlY4D4bXZkXPB
+        VwZg9rNZiqkFNkt1IAz1IhJqQAxfd8041bXgQXTjQWTjWYCDE6IbDyIbDyIbJUQ2SohuPIjrPTjZemZC
+        OGD1aJR4LocQ8XgQcnqmQ9PiVDJKatwjpQYn2RrE8UqI6WsQVtZgTVfCzK5BqFmDme4B7FqoPn+ENEKE
+        fxbQQ3hNB3gDMm3gh/Mujby01LH/vHxsJQc/pPS1SkdjdO1kzRY+wMeqWEwnM68TgQHdOFydhQntMKEV
+        sX0LjPAi1PQi1OwVDlPehRBM8c63NA+CITzdehHje2dTY8SLkNOLeF8JoacXBy+ly6AZEAzxwggvjFCC
+        GV6Y4YURSggpvTDEC0O8MMMLM1oAuxXQuexw5hO+Fg8/ry98I3eE/vqigoYXqqeNtvCcn8EE05uVRWcQ
+        60eTwWcFi+lkJtSYVtDUCTdDunGyZeG8a0mGBGCEEswILIJgSABGBGCEEswIwIwAjAjAiMBcaqwEYEYA
+        ZgRgRmAWBBMCMEHpcggmBGCC0nRqlARgRgBGBNwQTrQBmKAEIwIILwMwoQsmBAkejxE8cuZHLfg43faB
+        b+aMMN66Oq+DnyxjYTm/gx9cvb+yMCirskw7+LEiSk9CradrgXkdFs5Zu9VwJWiIjJRggobTroYDGBNq
+        zOsowQQNJmgLoPkQTFCCEdqVEEzQYIIGE5RmQjBBgwnaZdAMarRoMEGbBpVAbggGKOFkq+GApcEADVGO
+        ho1WpwA/CsVmfiJ8yRlhvr0gNzhsH8431MGPcKcJWO+jCnwC/J5UMtU3o8nyIStYSkwl4wpgOpn3YPE2
+        ICXA5w0RbAlXwlWgBAPYo2ngKmCjlAEDlNg2giuBhXPWblk+ZAVLicUU5vNxBTChxpyOEtMLuAJ4wGKM
+        zzDTwOxntMMNt2fZscD3zvxLo4T/jX98fWzwpLyvvKg1WpWlJYPfL5cPA5jH70knT1DpZBMGmDDABHwT
+        s9+EASYMMAHfBHgT4JUA3wR8E/BNgDcBXgnwTcA3Ad8EfBPglQDfBHwT8E3ANwFeCfBNwDcB3wR8kzE+
+        4NsdsGLwo1jzf3tVQfsF8x84xAb3hNfLixvD5ZMi/SpYSeD3FFIm9L/pmQL8od4KNGDLCBNqdkk1greD
+        zyUHiuSNDL+2uKBh10pXtvW2L6zB6OgX5a73mkqzQ0OGT/B28AneDj7B28En+GGE73WOC+9GqHneo53B
+        DsbCPKwdLM2LArxhCx9r/jcHH7Dt4BO8HXxstp/OnBTlIeu8xfnDMVgJ2lda6AsszwqlDX+IN0TY1m4H
+        Ab9z6ugQczv8BDHrbf15DbY5Pl/q+tEHK/Kj0SWZWmqfMgLY3zB8I2+EfnD25OjPy5z/42tLrJ3PARMK
+        XilzvF+3NEdDtGMOC3yCV/ABu89mmwQ+wdvBJ3gLvpk7wjg+PTOye1nxx4zsrH/+X8ZgZY0fWLSntOjg
+        4eumaAgz9T5Ljh18gh92+ICdAB+HLKP2sgz9lSVFB4eljHihD6Zs+Ymyh5ZMMbsXZoSGDT7B28EneBv4
+        Qazx7NvZvbToQNrdC3+Og81f7MDbt7zwdM3ibF2bNyHcZ8mxg8/1Pg34kaJR4ZorJupvLMo/xY61C+6/
+        JfwmBpen5ypLruRHO762vOjTD5fkGg0LJ4W12ePDA8O3wCeBz87kL2dMCH8wP8d4dUnhJ+xSHlSj7F/j
+        YPTE/YKfsfZ/S52/3rus0PPutXmRQ1flyJEFk6V23qTIyTkTQ80zM4LNV2QET86aGKqdM0k7cuVkOTgv
+        W969Oje8d8lUz/9Z4fg1bwvinSlfy//r8tc0eJXwPmbe6LyzsuRy/m9F/GwLil/zOb7G77F+5OK4OC6O
+        i+PiONe45JL/D5BYp3wjjMA7AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
