--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 9.0 (October 31, 2017)
    •Show/Hide statusbar
    •Full/Minimal mode toggles
    •Dictionary form now respects font dialog color
+   •Fixed broken URLs when clicking on links inside a document
    •Fixed bug where clicking "New" would sometimes not clear every page
    •Fixed rendering of checked items on menus
    •Word wrap checkbox now updates when you change tabs
