--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,8 @@
-﻿Version 9.1 (July 14, 2018)
+﻿Version 9.2 (August 20, 2018)
+   •Minor startup improvements
+   •Minor icon tweak
+
+Version 9.1 (July 14, 2018)
    •Indicator showing when smart replace has found a match
    •Context menu icons are now the same icon theme as the rest of the icons (Breeze)
    •Fixed a few smart replace errors
